# unicorn-mafia-hack

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  render.yaml  setup.sh
.agents/skills/testing-backend/: SKILL.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  piccolo_conf.py  pyproject.toml
backend/app/: agent.py  auth.py  billing.py  config.py  dependencies.py  exceptions.py  image_resize.py  linkedin_devin.py  linkedin_publish.py  linkedin_scoring.py  linkedin_store.py  linkedin_workflow.py  main.py  memory_onboarding.py  mubit_memory.py  pose_variant_templates.py  pose_variants.py  schemas.py  storage.py  templates.py
backend/app/agents/: __init__.py  mock.py  poses.py  provider.py  pydantic_ai_agent.py
backend/app/auth/: clerk.py
backend/app/routes/: __init__.py  billing.py  health.py  images.py  linkedin.py  memory.py  pose_mask.py  pose_variants.py
backend/app/storage/: database.py
backend/tests/: conftest.py  test_billing.py  test_guidance.py  test_linkedin.py  test_templates.py
frontend/: .env.example  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  d3-contour.d.ts  index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: base.ts  billing.ts  client.ts  guidance.ts  masks.ts  onboarding.ts  poseMask.ts  poseVariants.ts  types.ts
frontend/src/backend/: client.ts
frontend/src/camera/: saveAlignedComposite.ts
mobile/: .env  .env.example  .gitignore  README.md  app.config.ts  babel.config.js  eas.json  package-lock.json  package.json
mobile/scripts/: install-pose-model.sh
mobile/src/: App.tsx  config.ts  types.ts
scripts/: run-backend.sh  run-frontend.sh  run-ngrok.sh  stop-all.sh
storage/: Dockerfile  entrypoint.sh
(+56 files in other folders)
