[project]
name = "frame-mog"
version = "0.1.0"
description = "frame-mog FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.8",
    "pydantic-ai-slim[openai]>=1.16",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "clerk-backend-api>=0.3.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "mubit-sdk>=0.5.3",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]
