[project]
name = "frame-mog"
version = "0.1.0"
description = "frame-mog FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=2.8.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.8",
    "pydantic-ai-slim[openai]>=1.16",
    "mubit-sdk>=0.5.3",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "clerk-backend-api>=5.0",
    "stripe>=12.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.ty.src]
# Optional S3 helper; uses boto3 which is not a core API dependency.
exclude = ["app/storage.py"]
